--- a/res/layout/cave3d_export_dialog.xml
+++ b/res/layout/cave3d_export_dialog.xml
@@ -98,6 +98,11 @@
           android:layout_height="wrap_content"
           android:text="LAS-bin"
         />
+        <CheckBox android:id="@+id/gltf"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:text="glTF"
+        />
       </LinearLayout>
     </LinearLayout>
 
