--- a/res/layout/cave3d_walls_dialog.xml
+++ b/res/layout/cave3d_walls_dialog.xml
@@ -34,6 +34,13 @@
         android:layout_gravity="right"
         android:layout_marginLeft="20dp"
         >
+        <CheckBox android:id="@+id/tube"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="10dp"
+          android:layout_marginRight="10dp"
+          android:text="@string/walls_tube"
+        />
         <CheckBox android:id="@+id/hull"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
@@ -64,6 +71,13 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         >
+        <CheckBox android:id="@+id/tube_no"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="10dp"
+          android:layout_marginRight="10dp"
+          android:text="@string/clear"
+        />
         <CheckBox android:id="@+id/hull_no"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
