select station where to continue BT survey

--- a/res/layout/bluetooth_survey_list.xml
+++ b/res/layout/bluetooth_survey_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
   >
+
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
@@ -22,17 +23,18 @@
     />
   </LinearLayout>
     
-  <ScrollView
+  <!-- ScrollView
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    >
+    -->
     <ListView android:id="@+id/list"
-      style="@style/list_bottom"
+      style="@style/list_top"
       android:background="@color/edit_background"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_weight="1"
     />  
-  </ScrollView>
+  <!-- /ScrollView -->
+
 </LinearLayout>
 
