--- a/res/layout/cave3d_export_dialog.xml
+++ b/res/layout/cave3d_export_dialog.xml
@@ -7,19 +7,19 @@
     android:paddingRight="6dip"
     android:paddingBottom="3dip">
    					  
-    <TextView android:id="@+id/dirname"
+    <!-- TextView android:id="@+id/dirname"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content" 
       android:gravity="left"
-      />
+      / -->
    					  
-    <EditText android:id="@+id/filename"
+    <!-- EditText android:id="@+id/filename"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content" 
       android:layout_marginTop="10dp"
       android:gravity="left"
       android:hint="filename"
-      />
+      / -->
 
     <LinearLayout
       android:layout_width="fill_parent" 
@@ -137,12 +137,12 @@
         />
      </LinearLayout>
 
-     <ListView android:id="@+id/list"
+     <!-- ListView android:id="@+id/list"
         style="@style/list_bottom"
         android:layout_width="match_parent" 
         android:layout_height="match_parent"
         android:layout_weight="1"
-       />
+       / -->
 
 
 </LinearLayout>
